--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "mongo-migrator"
-version = "1.0.0rc1"
+version = "1.0.0"
 description = "Simple MongoDB migrations tool."
 license = "MIT"
 license-files = ["LICEN[CS]E*"]
@@ -21,12 +21,13 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
     "Topic :: Database",
     "Topic :: Software Development :: Libraries :: Python Modules",
 
 ]
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.9,<=3.14"
 dependencies = [
     "pymongo (>=4.11.1,<5.0.0)"
 ]
